@@ -1,6 +1,6 @@
-.\"	$NetBSD: bozohttpd.8,v 1.22 2010/06/22 07:00:12 wiz Exp $
+.\"	$NetBSD: bozohttpd.8,v 1.23 2010/09/20 23:11:38 mrg Exp $
 .\"
-.\"	$eterna: bozohttpd.8,v 1.98 2010/06/21 06:47:23 mrg Exp $
+.\"	$eterna: bozohttpd.8,v 1.99 2010/09/20 22:26:28 mrg Exp $
 .\"
 .\" Copyright (c) 1997-2010 Matthew R. Green
 .\" All rights reserved.
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 17, 2010
+.Dd September 20, 2010
 .Dt HTTPD 8
 .Os
 .Sh NAME
@@ -464,7 +464,7 @@ The focus has always been simplicity and security, with minimal features
 and regular code audits.
 This manual documents
 .Nm
-version 20100621.
+version 20100920.
 .Sh AUTHORS
 .Nm
 was written by Matthew R. Green
@@ -480,6 +480,10 @@ provided some clean up for memory leaks
 Christoph Badura
 .Aq bad@bsd.de
 provided Range: header support
+.It
+Sean Boudreau
+.Aq seanb@NetBSD.org
+provided an security fix for virtual hosting
 .It
 Julian Coleman
 .Aq jdc@coris.org.uk
@@ -554,6 +558,10 @@ provided various fixes
 Tyler Retzlaff
 .Aq rtr@eterna.com.au
 provided SSL support, cgi-bin fixes and much other random other stuff
+.It
+rudolf
+.Aq netbsd@eq.cz
+provided minor compile fixes and a CGI content map fix
 .It
 Steve Rumble
 .Aq rumble@ephemeral.org
